# data-boar

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALISE_COMPETITIVA_MVP.md  ARQUITETURA_MVP_PLANO.md  CHANGELOG.md  CODE_OF_CONDUCT.pt_BR.md  CONTRIBUTING.md  CONTRIBUTING.pt_BR.md  DOCKER_SETUP.md  Dockerfile  LICENSE.pt_BR.md  MATRIZ_FEATURES_DETALHADA.md  NOTICE  NOTICE.pt_BR.md  PRIVACY_POLICY.md  PRIVACY_POLICY.pt_BR.md  README.md  README.pt_BR.md  SECURITY.md  SECURITY.pt_BR.md  SUMARIO_EXECUTIVO_MVP.md  TERMS_OF_USE.md  TERMS_OF_USE.pt_BR.md  TOPOLOGY.md  audit.ps1  audit.sh  config.yaml  database_scanner.py  lgpdc.py  main.py  pyproject.toml  requirements.txt  run.py  sonar-project.properties
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: app.py  locale_i18n.py  rbac.py  routes.py  webauthn_html_gate.py  webauthn_routes.py
app/: __init__.py  dashboard.py  grc_dashboard_model.py
cli/: __init__.py  reporter.py
config/: README.md  README.pt_BR.md  loader.py  redact_config.py  regex_overrides.example.yaml  scan_defaults.py  scope_import_csv.py
connectors/: data_soup_formats.py  dataverse_connector.py  file_connector.py  filesystem_connector.py  mongodb_connector.py  nfs_connector.py  powerbi_connector.py  redis_connector.py  rest_connector.py  rich_media_sample.py  sharepoint_connector.py  smb_connector.py  snowflake_connector.py  sql_connector.py  sql_sampling.py  sql_table_row_estimate.py  stego_hint.py  webdav_connector.py
core/: about.py  advisor.py  aggregated_identification.py  audit_export.py  brazilian_cpf.py  column_name_normalize.py  connector_registry.py  content_type.py  crypto_audit.py  database.py  database_manager.py  detector.py  discovery_orchestrator.py  dl_backend.py  engine.py  enterprise_surface_posture.py  fuzzy_column_match.py  host_resolution.py  intelligence.py  learned_patterns.py  ml_engine.py  prefilter.py  rbac_settings.py  recommendations.py  rich_media_magic.py  runtime_trust.py  sampling.py  sampling_policy.py  scan_audit_log.py  scanner.py  session.py  suggested_review.py  throttler.py  validation.py
data/: config.yaml
database/: README.md  connectors.py  scanner.py
db/: databasse.py
deploy/: DEPLOY.md  README.md  STAGING_CONFIG.md  config.example.yaml  config.staging.example.yaml  docker-compose.override.example.yml  docker-compose.yml  scope_import.example.csv
docs/: ACADEMIC_USE_AND_THESIS.md  ACADEMIC_USE_AND_THESIS.pt_BR.md  ADDING_CONNECTORS.md  CODE_PROTECTION_OPERATOR_PLAYBOOK.md  CODE_PROTECTION_OPERATOR_PLAYBOOK.pt_BR.md  COLLABORATION_TEAM.md  COLLABORATION_TEAM.pt_BR.md  COMMIT_AND_PR.md  COMMIT_AND_PR.pt_BR.md  COMPLIANCE_AND_LEGAL.md  COMPLIANCE_AND_LEGAL.pt_BR.md  COMPLIANCE_FRAMEWORKS.md  COMPLIANCE_FRAMEWORKS.pt_BR.md  COMPLIANCE_METHODOLOGY.md  COMPLIANCE_METHODOLOGY.pt_BR.md  COMPLIANCE_TECHNICAL_REFERENCE.md  COMPLIANCE_TECHNICAL_REFERENCE.pt_BR.md  COPYRIGHT_AND_TRADEMARK.md  COPYRIGHT_AND_TRADEMARK.pt_BR.md  DECISION_MAKER_VALUE_BRIEF.md  DECISION_MAKER_VALUE_BRIEF.pt_BR.md  DOCKER_SETUP.md  DOCKER_SETUP.pt_BR.md  GLOSSARY.md  GLOSSARY.pt_BR.md  HOMELAB_VALIDATION.md  HOMELAB_VALIDATION.pt_BR.md  HOSTING_AND_WEBSITE_OPTIONS.md  JURISDICTION_COLLISION_HANDLING.md  JURISDICTION_COLLISION_HANDLING.pt_BR.md  LICENSING_OPEN_CORE_AND_COMMERCIAL.md  LICENSING_OPEN_CORE_AND_COMMERCIAL.pt_BR.md  LICENSING_SPEC.md  MAP.md  MAP.pt_BR.md  MASCOT.md  MINOR_DETECTION.md  MINOR_DETECTION.pt_BR.md  NARRATIVE_AND_ARCHITECTURE_HISTORY.md  NARRATIVE_AND_ARCHITECTURE_HISTORY.pt_BR.md  (+81 more)
file_scan/: text_extractor.py
logging_custom/: logger.py
pro/: engine.py  worker_logic.py
report/: evidence_collector.py  executive_report.py  generator.py  recommendation_engine.py  scan_evidence.py  sqlite_reporter.py
scanners/: README.md  data_scanner.py  db_connector.py  db_scanner.py  report_generator.py  scanner_factory.py
scripts/: _author_info_locale_pass.py  _pr_dashboard_automation.ps1  ats-candidate-import.ps1  ats-hub-export.ps1  ats-profile.ps1  ats.ps1  audit_concat_sliding_window.py  auto-mode-session-pack.ps1  benchmark-ab.ps1  build-rust-prefilter.ps1  build_favicon.py  build_locale_catalogs.py  candidate-dossier-scaffold.ps1  check-all.ps1  check-all.sh  check_name_availability.py  collect-homelab-report-remote.ps1  commit-or-pr.ps1  completao-chat-starter.ps1  create-pr.ps1  do_commit.ps1  do_pr_release.ps1  docker-scout-critical-gate.ps1  dump-context.ps1  dump-context.sh  enel.ps1  energy-report.ps1  example-release-manifest.json  export_legal_cartas_advogado_pdf.py  export_public_gemini_bundle.py  external-review-pack.ps1  extract_cv_pdf.py  filter_repo_bash_localiza_danfe_replacements.txt  filter_repo_pii_replacements.txt  filter_repo_upstream_tools_replacements.txt  fix_markdown_sonar.py  gatekeeper-audit.ps1  generate-sbom.ps1  generate_synthetic_poc_corpus.py  gh-ensure-default.ps1  (+77 more)
tests/: README.md  conftest.py  operator_help_sync_manifest.py  test_about_version_matches_pyproject.py  test_aggregated_identification.py  test_ansible_playbooks_unattended_apt.py  test_api_assessment_poc.py  test_api_key.py  test_api_route_matrix_plan_sync.py  test_api_scan.py  test_api_scan_content_type_check.py  test_archives_helpers.py  test_audit.py  test_audit_export.py  test_basic_python_scan_single_pass_parity.py  test_brazilian_cpf.py  test_cli_reporter_rca.py  test_cnpj_formats.py  test_column_name_ml_normalize.py  test_compliance_samples.py  test_confidential_commercial_guard.py  test_config_encoding.py  test_config_scope_hash.py  test_config_sql_sampling_files.py  test_connector_timeouts.py  test_content_type_detection.py  test_content_type_pdf_extension_choice.py  test_core_recommendations.py  test_crypto_audit_engine_wiring.py  test_crypto_audit_helper.py  test_csp_headers.py  test_data_scanner.py  test_data_soup_tier1.py  test_data_source_inventory_connectors.py  test_database.py  test_database_manager.py  test_dependency_artifacts_sync.py  test_detector_entertainment_regression.py  test_discovery_orchestrator.py  (+61 more)
utils/: logger.py  (+6 more)
(+722 files in other folders)
